--- a/style.css
+++ b/style.css
@@ -54,9 +54,11 @@ main .hero-text-container > * {
 
   body .main .hero-text-container {
     position: relative;
-    top: 50%;
-    left: 50%;
-    transform: translate(-37.5%, -50%) rotateZ(-13deg);
+    top: unset;
+    left: unset;
+    transform: unset;
+    margin-top: 30vh;
+    text-align: center;
   }
 
   .CAPTURE {
