--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ main .hero-text-container > * {
   font-size: 4vw;
   transform-origin: center;
   transform: translateY(-1vw) translateX(4vw) rotateZ(-13deg);
+  padding-bottom: 3vh;
 }
 
 .ZOE {
