added flexbox to title

--- a/style.css
+++ b/style.css
@@ -20,6 +20,9 @@
   color: white;
   /* overflow: hidden; */
   z-index: 10;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 main .hero-text-container > * {
