--- a/style.css
+++ b/style.css
@@ -13,16 +13,13 @@
 .main .hero-text-container {
   position: absolute;
   font-family: "brat";
-  top: 50%;
-  left: 45%;
-  transform: translate(-50%, -50%) rotateZ(-8deg);
+  top: 20vh;
+  left: 5%;
+  /* transform: translate(-50%, -50%) rotateZ(-8deg); */
   /* background-color: mistyrose; */
   color: white;
   /* overflow: hidden; */
   z-index: 10;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
 }
 
 main .hero-text-container > * {
@@ -32,10 +29,12 @@ main .hero-text-container > * {
 }
 
 .CAPTURE {
-  font-size: 4vw;
-  transform-origin: center;
-  transform: translateY(-1vw) translateX(4vw) rotateZ(-13deg);
-  padding-bottom: 3vh;
+  font-size: 8vw;
+  letter-spacing: 1vw;
+  /* transform-origin: center;
+  transform: translateY(-1vw) translateX(4vw) rotateZ(-13deg); */
+  padding-left: 5vw;
+  z-index: 999;
 }
 
 .ZOE {
