--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  min-height: 25vmax;
+  min-height: 35vmax;
 }
 
 main .hero-text-container > * {
@@ -34,6 +34,7 @@ main .hero-text-container > * {
 
 .CAPTURE {
   padding-top: 3vh;
+  padding-bottom: 5vmin;
   font-size: 8vw;
   letter-spacing: 1vw;
   /* transform-origin: center;
@@ -43,6 +44,7 @@ main .hero-text-container > * {
 }
 
 .ZOE {
+  padding-top: 3vh;
   /* position: absolute; */
   font-size: 26vw;
   letter-spacing: 6vw;
