--- a/pages/photo/photo.css
+++ b/pages/photo/photo.css
@@ -15,10 +15,6 @@ nav.nav {
   overflow: visible;
 }
 
-main > * {
-  /* border: solid; */
-}
-
 .hero-container {
   width: 100vw;
   text-align: center;
@@ -38,15 +34,18 @@ main > * {
   margin: 1vmin;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(8, minmax(25vmin, 1fr));
+  grid-template-rows: repeat(14, minmax(25vmin, 1fr));
+  grid-gap: 2vmin;
   gap: 2vmin;
+  height: max-content;
 }
 
 @media all and (min-width: 1600px) {
   .grid-container {
     margin: auto;
     max-width: 1600px;
-    grid-template-rows: repeat(8, minmax(30vmin, 1fr));
+    grid-template-rows: repeat(14, minmax(30vmin, 1fr));
+    padding-bottom: 100px;
   }
 }
 
@@ -54,7 +53,7 @@ main > * {
   .grid-container {
     gap: 0.5rem;
     margin: 1rem;
-    grid-template-rows: repeat(12, 20vh);
+    grid-template-rows: repeat(21, 130px);
     grid-template-columns: repeat(2, 1fr);
     height: max-content;
   }
@@ -99,6 +98,7 @@ main > * {
   /* grid-row: 1;
   grid-column: 1; */
   background-color: black;
+  /* min-height: 200px; */
 }
 
 .large {
